# troxel

./: .travis.yml  Cargo.toml  README.md
assets/shaders/: default_fragment.glsl  default_vertex.glsl  none.frag  shader.fs  shader.vs  shader_tex.frag  shader_tex.vert
src/: buffer.rs  camera.rs  config.rs  main.rs  main_old.rs  pipeline.rs  render.rs  test_values.rs  texture.rs  types.rs  utils.rs
src/render/: buffer.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
src/state/: mod.rs  state_handler.rs  traits.rs
src/state/states/: chaotic_state.rs  menu_state.rs  mod.rs  none_sate.rs  state_ids.rs  test_state.rs
src/tools/: camera.rs  mod.rs  uniforms.rs
