[package]
name = "troxel"
version = "0.0.1"
authors = ["Sebastian Strobl <Sebastian@Strobl.net>"]
edition = "2018"

[[bin]]
name="main"
path="src/main.rs"

[dependencies]
winit = "0.22.2"
winit_input_helper = "0.7.0"
wgpu = {version = "0.5.0", features = ["vulkan"]}
futures = "0.3.5"
serde = { version = "1.0.110", features = ["derive"] }
glsl-to-spirv = "0.1.7"
bytemuck = "1.2.0"
image = "0.23.4"
ultraviolet = "0.4.6"